--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,25 @@
-th,
-td {
-  border: 1px solid rgb(160 160 160);
-  padding: 8px 10px;
-}
-
-th[scope='col'] {
-  background-color: #505050;
-  color: #fff;
-}
-
-th[scope='row'] {
-  background-color: #d6ecd4;
-}
-
-td {
-  text-align: center;
-}
-
-tr:nth-of-type(even) {
-  background-color: #eee;
-}
-
-table {
-  border-collapse: collapse;
-  border: 2px solid rgb(140 140 140);
-  font-family: sans-serif;
-  font-size: 0.8rem;
-  letter-spacing: 1px;
-}
-
-caption {
-  caption-side: bottom;
-  padding: 10px;
+h1 {
+    color: red;
+    font-size: 100px;
 }
 img {
-  border-radius : 50%;
+    width: 20%;
+    background-color: red;
+}
+img:hover {
+    background-color: gold;
+}
+.bacon {
+    background-color: green;
+}
+.broccoli {
+    background-color: red;
+}
+
+#heading {
+    color: blue;
+}
+
+.circular {
+    border-radius: 100%;
 }
